@@ -130,7 +130,7 @@ convert{T,N}(::Type{KnetArray}, x::KnetArray{T,N}) = x
 convert{T,N}(::Type{KnetArray{T}}, x::KnetArray{T,N}) = x
 convert{T,N}(::Type{KnetArray{T,N}}, x::KnetArray{T,N}) = x
 convert{T,N,S}(::Type{KnetArray{T}}, x::KnetArray{S,N}) = convert(KnetArray{T,N}, x)
-convert{T,N,S}(::Type{KnetArray{T,N}}, x::KnetArray{S,N}) = convert(KnetArray{T,N},unsafe_copy!(Array(S, size(x)), 1, x, 1, length(x)))
+convert{T,N,S}(::Type{KnetArray{T,N}}, x::KnetArray{S,N}) = convert(KnetArray{T,N},unsafe_copy!(Array{S}(size(x)), 1, x, 1, length(x)))
 reshape{T}(a::KnetArray{T},dims::Dims)=(if dims==size(a); a; elseif prod(dims)!=length(a); throw(DimensionMismatch()); else; KnetArray{T,length(dims)}(a.ptr,dims); end)
 reshape(a::KnetArray, dims::Int...) = reshape(a, dims)
 vec(a::KnetArray) = reshape(a, length(a))
